--- a/LocationTracking/LocationTracking/Base.lproj/Main.storyboard
+++ b/LocationTracking/LocationTracking/Base.lproj/Main.storyboard
@@ -418,14 +418,14 @@
 
 </mutableString>
                                                 <attributes>
-                                                    <font key="NSFont" size="14" name=".SFNSText"/>
+                                                    <font key="NSFont" size="13" name=".SFNSText"/>
                                                     <paragraphStyle key="NSParagraphStyle" alignment="justified" lineBreakMode="wordWrapping" baseWritingDirection="natural" tighteningFactorForTruncation="0.0"/>
                                                 </attributes>
                                             </fragment>
                                             <fragment>
                                                 <mutableString key="content"> Khi HLV Mourinho nhận thấy khả năng phòng ngự của Everton suy giảm, ông tung Herrera vào sân ở phút 77. Chỉ 6 phút sau khi Cầu thủ xuất sắc nhất MU mùa giải 2016/17 hiện diện, MU có bàn thắng thứ hai. Khi đó, Herrera trám vào chỗ của Fellaini, còn “Đầu xù” chơi cao hơn, trực diện và gây áp lực nhiều hơn lên hàng thủ Everton, buộc Ashley Williams mắc sai lầm. Và rồi bàn thắng thứ hai, thứ ba, thứ tư đến như một lẽ tất yếu.</mutableString>
                                                 <attributes>
-                                                    <font key="NSFont" size="14" name=".SFNSText"/>
+                                                    <font key="NSFont" size="13" name=".SFNSText"/>
                                                     <paragraphStyle key="NSParagraphStyle" alignment="justified" lineBreakMode="wordWrapping" baseWritingDirection="natural" lineHeightMultiple="1.5" tighteningFactorForTruncation="0.0"/>
                                                 </attributes>
                                             </fragment>
@@ -450,38 +450,61 @@
                                     <outlet property="delegate" destination="JDH-QB-9yJ" id="L0P-HO-xwf"/>
                                 </connections>
                             </scrollView>
-                            <tableView clipsSubviews="YES" contentMode="scaleToFill" fixedFrame="YES" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="44" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="lGj-fL-sa9">
-                                <rect key="frame" x="40" y="262" width="240" height="128"/>
-                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                            <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="44" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="lGj-fL-sa9">
+                                <rect key="frame" x="20" y="260" width="280" height="253"/>
                                 <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                 <connections>
                                     <outlet property="dataSource" destination="JDH-QB-9yJ" id="eMr-bi-Pe1"/>
                                     <outlet property="delegate" destination="JDH-QB-9yJ" id="5FK-RR-Eyr"/>
                                 </connections>
                             </tableView>
-                            <textView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" fixedFrame="YES" textAlignment="natural" translatesAutoresizingMaskIntoConstraints="NO" id="zcC-d7-DLe">
-                                <rect key="frame" x="40" y="531" width="240" height="37"/>
-                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                            <textView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" textAlignment="justified" translatesAutoresizingMaskIntoConstraints="NO" id="zcC-d7-DLe">
+                                <rect key="frame" x="20" y="523" width="215" height="40"/>
                                 <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="40" id="SAQ-31-MpO"/>
+                                </constraints>
                                 <string key="text">Lorem ipsum dolor sit er elit lamet, consectetaur cillium adipisicing pecu, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum. Nam liber te conscient to factor tum poen legum odioque civiuda.</string>
-                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="12"/>
                                 <textInputTraits key="textInputTraits" autocapitalizationType="sentences"/>
                             </textView>
-                            <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="ngK-ax-Y2t">
-                                <rect key="frame" x="274" y="530" width="46" height="30"/>
-                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                                <state key="normal" title="Button"/>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="ngK-ax-Y2t">
+                                <rect key="frame" x="240" y="528" width="60" height="35"/>
+                                <color key="backgroundColor" red="0.1960784314" green="0.64705882349999999" blue="0.85490196080000003" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="35" id="AOD-hu-aQW"/>
+                                    <constraint firstAttribute="width" constant="60" id="HdJ-kN-xHC"/>
+                                </constraints>
+                                <fontDescription key="fontDescription" type="system" pointSize="16"/>
+                                <state key="normal" title="Send">
+                                    <color key="titleColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                                </state>
+                                <connections>
+                                    <action selector="tappedSendComment:" destination="JDH-QB-9yJ" eventType="touchUpInside" id="5NA-18-fye"/>
+                                </connections>
                             </button>
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                         <constraints>
+                            <constraint firstItem="zcC-d7-DLe" firstAttribute="top" secondItem="lGj-fL-sa9" secondAttribute="bottom" constant="10" id="0dQ-Eg-sSL"/>
+                            <constraint firstItem="NLV-VF-51N" firstAttribute="top" secondItem="ngK-ax-Y2t" secondAttribute="bottom" constant="5" id="0nX-cl-HoU"/>
+                            <constraint firstItem="ngK-ax-Y2t" firstAttribute="leading" secondItem="zcC-d7-DLe" secondAttribute="trailing" constant="5" id="44X-UL-kQn"/>
+                            <constraint firstItem="zcC-d7-DLe" firstAttribute="leading" secondItem="qUE-ki-UZ3" secondAttribute="leading" constant="20" id="6U3-70-Xxx"/>
+                            <constraint firstItem="lGj-fL-sa9" firstAttribute="top" secondItem="VL2-B9-VfR" secondAttribute="bottom" constant="20" id="HoS-J6-Fzs"/>
+                            <constraint firstItem="lGj-fL-sa9" firstAttribute="leading" secondItem="qUE-ki-UZ3" secondAttribute="leading" constant="20" id="N03-UH-246"/>
                             <constraint firstItem="VL2-B9-VfR" firstAttribute="top" secondItem="Rds-pX-JvC" secondAttribute="bottom" constant="20" id="NgX-4l-ti7"/>
+                            <constraint firstAttribute="trailing" secondItem="lGj-fL-sa9" secondAttribute="trailing" constant="20" id="dhi-Ml-b3Q"/>
                             <constraint firstAttribute="trailing" secondItem="VL2-B9-VfR" secondAttribute="trailing" constant="20" id="fjT-XU-2qO"/>
+                            <constraint firstAttribute="trailing" secondItem="ngK-ax-Y2t" secondAttribute="trailing" constant="20" id="jKp-fM-xW7"/>
                             <constraint firstItem="VL2-B9-VfR" firstAttribute="leading" secondItem="qUE-ki-UZ3" secondAttribute="leading" constant="20" id="o98-TL-fR4"/>
+                            <constraint firstItem="NLV-VF-51N" firstAttribute="top" secondItem="zcC-d7-DLe" secondAttribute="bottom" constant="5" id="xNm-1a-Jos"/>
                         </constraints>
                     </view>
                     <connections>
+                        <outlet property="inputTextView" destination="zcC-d7-DLe" id="OyL-06-9EP"/>
                         <outlet property="scrollView" destination="VL2-B9-VfR" id="Odd-z4-NIG"/>
+                        <outlet property="sendCommentButton" destination="ngK-ax-Y2t" id="9ZL-Aq-OAQ"/>
+                        <outlet property="tableView" destination="lGj-fL-sa9" id="gc7-kt-qjl"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="rTy-n7-afN" userLabel="First Responder" sceneMemberID="firstResponder"/>
@@ -566,7 +589,7 @@
                                         <rect key="frame" x="0.0" y="28" width="320" height="85"/>
                                         <autoresizingMask key="autoresizingMask"/>
                                         <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="5TQ-gH-dvK" id="jsX-u9-gUg">
-                                            <rect key="frame" x="0.0" y="0.0" width="320" height="85"/>
+                                            <rect key="frame" x="0.0" y="0.0" width="320" height="84.5"/>
                                             <autoresizingMask key="autoresizingMask"/>
                                             <subviews>
                                                 <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="ic_avar" translatesAutoresizingMaskIntoConstraints="NO" id="D0w-EX-9GP">
@@ -729,7 +752,7 @@
                                         <rect key="frame" x="0.0" y="28" width="320" height="80"/>
                                         <autoresizingMask key="autoresizingMask"/>
                                         <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="KQz-We-sOP" id="YhF-h3-tXK">
-                                            <rect key="frame" x="0.0" y="0.0" width="320" height="80"/>
+                                            <rect key="frame" x="0.0" y="0.0" width="320" height="79.5"/>
                                             <autoresizingMask key="autoresizingMask"/>
                                             <subviews>
                                                 <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Email" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="WG9-i0-21A">
