--- a/LocationTracking/LocationTracking/Base.lproj/Main.storyboard
+++ b/LocationTracking/LocationTracking/Base.lproj/Main.storyboard
@@ -5,7 +5,7 @@
     </device>
     <dependencies>
         <deployment identifier="iOS"/>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="13174"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="13173"/>
         <capability name="Aspect ratio constraints" minToolsVersion="5.1"/>
         <capability name="Constraints with non-1.0 multipliers" minToolsVersion="5.1"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
@@ -789,10 +789,10 @@
                                 </constraints>
                             </view>
                             <view hidden="YES" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="W9Q-Ev-QUF">
-                                <rect key="frame" x="0.0" y="20" width="320" height="70"/>
+                                <rect key="frame" x="0.0" y="20" width="320" height="80"/>
                                 <subviews>
                                     <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="EDV-Hy-euQ">
-                                        <rect key="frame" x="285" y="8" width="35" height="35"/>
+                                        <rect key="frame" x="275" y="8" width="35" height="35"/>
                                         <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
                                         <constraints>
                                             <constraint firstAttribute="width" constant="35" id="QgW-6W-xWt"/>
@@ -805,13 +805,12 @@
                                         </connections>
                                     </button>
                                     <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" placeholder="new location" textAlignment="justified" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="gN0-hr-wzR" customClass="TextField" customModule="LocationTracking" customModuleProvider="target">
-                                        <rect key="frame" x="40" y="8" width="240" height="35"/>
+                                        <rect key="frame" x="40" y="8" width="225" height="35"/>
                                         <color key="backgroundColor" red="1" green="1" blue="1" alpha="0.69999999999999996" colorSpace="calibratedRGB"/>
                                         <color key="tintColor" red="0.1960784314" green="0.64705882349999999" blue="0.85490196080000003" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                         <rect key="contentStretch" x="1" y="0.0" width="1" height="1"/>
                                         <constraints>
                                             <constraint firstAttribute="height" constant="35" id="WY8-FV-urp"/>
-                                            <constraint firstAttribute="width" constant="240" id="bYl-5Y-Yw9"/>
                                         </constraints>
                                         <fontDescription key="fontDescription" type="system" pointSize="13"/>
                                         <textInputTraits key="textInputTraits"/>
@@ -819,17 +818,6 @@
                                             <outlet property="delegate" destination="BYZ-38-t0r" id="xe0-bK-15Y"/>
                                         </connections>
                                     </textField>
-                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="LVc-um-tRL">
-                                        <rect key="frame" x="0.0" y="43" width="26" height="26"/>
-                                        <constraints>
-                                            <constraint firstAttribute="width" constant="26" id="7zh-Er-dXg"/>
-                                            <constraint firstAttribute="height" constant="26" id="EiL-nZ-StK"/>
-                                        </constraints>
-                                        <state key="normal" image="ico_close"/>
-                                        <connections>
-                                            <action selector="tappedCloseAddingNewLocation:" destination="BYZ-38-t0r" eventType="touchUpInside" id="0dM-CZ-Lwy"/>
-                                        </connections>
-                                    </button>
                                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Lat:" textAlignment="justified" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="0C5-Nc-5Yx">
                                         <rect key="frame" x="40" y="48" width="110" height="14.5"/>
                                         <constraints>
@@ -845,18 +833,29 @@
                                         <nil key="textColor"/>
                                         <nil key="highlightedColor"/>
                                     </label>
+                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="LVc-um-tRL">
+                                        <rect key="frame" x="4" y="54" width="26" height="26"/>
+                                        <constraints>
+                                            <constraint firstAttribute="width" constant="26" id="7zh-Er-dXg"/>
+                                            <constraint firstAttribute="height" constant="26" id="EiL-nZ-StK"/>
+                                        </constraints>
+                                        <state key="normal" image="ico_close"/>
+                                        <connections>
+                                            <action selector="tappedCloseAddingNewLocation:" destination="BYZ-38-t0r" eventType="touchUpInside" id="0dM-CZ-Lwy"/>
+                                        </connections>
+                                    </button>
                                 </subviews>
                                 <color key="backgroundColor" red="1" green="1" blue="1" alpha="0.90000000000000002" colorSpace="calibratedRGB"/>
                                 <constraints>
-                                    <constraint firstItem="gN0-hr-wzR" firstAttribute="centerX" secondItem="W9Q-Ev-QUF" secondAttribute="centerX" id="9AS-SI-AhE"/>
-                                    <constraint firstAttribute="trailing" secondItem="EDV-Hy-euQ" secondAttribute="trailing" id="9Mk-fw-39D"/>
-                                    <constraint firstItem="EDV-Hy-euQ" firstAttribute="leading" secondItem="gN0-hr-wzR" secondAttribute="trailing" constant="5" id="GwF-Vl-VX5"/>
+                                    <constraint firstAttribute="trailing" secondItem="EDV-Hy-euQ" secondAttribute="trailing" constant="10" id="9Mk-fw-39D"/>
+                                    <constraint firstItem="gN0-hr-wzR" firstAttribute="leading" secondItem="W9Q-Ev-QUF" secondAttribute="leading" constant="40" id="Au4-ot-yjD"/>
+                                    <constraint firstItem="EDV-Hy-euQ" firstAttribute="leading" secondItem="gN0-hr-wzR" secondAttribute="trailing" constant="10" id="B6C-KR-kBG"/>
                                     <constraint firstItem="5HG-xz-d5B" firstAttribute="leading" secondItem="0C5-Nc-5Yx" secondAttribute="trailing" constant="5" id="IOF-nZ-UX4"/>
+                                    <constraint firstItem="0C5-Nc-5Yx" firstAttribute="leading" secondItem="LVc-um-tRL" secondAttribute="trailing" constant="10" id="J1F-6d-HLE"/>
                                     <constraint firstItem="0C5-Nc-5Yx" firstAttribute="leading" secondItem="gN0-hr-wzR" secondAttribute="leading" id="Vlz-Qy-GZI"/>
-                                    <constraint firstAttribute="height" constant="70" id="Y5a-ba-FR2"/>
+                                    <constraint firstAttribute="height" constant="80" id="Y5a-ba-FR2"/>
                                     <constraint firstItem="gN0-hr-wzR" firstAttribute="top" secondItem="W9Q-Ev-QUF" secondAttribute="top" constant="8" id="ZhI-H4-Clh"/>
-                                    <constraint firstItem="LVc-um-tRL" firstAttribute="top" secondItem="gN0-hr-wzR" secondAttribute="bottom" id="eRz-Pg-aEs"/>
-                                    <constraint firstItem="LVc-um-tRL" firstAttribute="leading" secondItem="W9Q-Ev-QUF" secondAttribute="leading" id="jqw-7N-A7t"/>
+                                    <constraint firstAttribute="bottom" secondItem="LVc-um-tRL" secondAttribute="bottom" id="f5x-co-X8e"/>
                                     <constraint firstItem="5HG-xz-d5B" firstAttribute="top" secondItem="gN0-hr-wzR" secondAttribute="bottom" constant="5" id="pco-zL-AhQ"/>
                                     <constraint firstItem="EDV-Hy-euQ" firstAttribute="centerY" secondItem="gN0-hr-wzR" secondAttribute="centerY" id="yBa-hf-Eqf"/>
                                     <constraint firstItem="0C5-Nc-5Yx" firstAttribute="top" secondItem="gN0-hr-wzR" secondAttribute="bottom" constant="5" id="yzM-Zm-QhZ"/>
@@ -932,7 +931,7 @@
                                         <rect key="frame" x="0.0" y="28" width="320" height="85"/>
                                         <autoresizingMask key="autoresizingMask"/>
                                         <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="5TQ-gH-dvK" id="jsX-u9-gUg">
-                                            <rect key="frame" x="0.0" y="0.0" width="320" height="85"/>
+                                            <rect key="frame" x="0.0" y="0.0" width="320" height="84.5"/>
                                             <autoresizingMask key="autoresizingMask"/>
                                             <subviews>
                                                 <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="ic_avar" translatesAutoresizingMaskIntoConstraints="NO" id="D0w-EX-9GP">
@@ -943,13 +942,13 @@
                                                     </constraints>
                                                 </imageView>
                                                 <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Nguyễn Hải Đăng" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="gSY-JT-urN">
-                                                    <rect key="frame" x="60" y="15" width="225" height="17"/>
+                                                    <rect key="frame" x="60" y="15" width="230" height="17"/>
                                                     <fontDescription key="fontDescription" type="system" weight="semibold" pointSize="14"/>
                                                     <color key="textColor" red="0.40784313725490196" green="0.40784313725490196" blue="0.40784313725490196" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                                     <nil key="highlightedColor"/>
                                                 </label>
                                                 <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="3" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="K0Q-JC-jvl">
-                                                    <rect key="frame" x="60" y="37" width="225" height="0.0"/>
+                                                    <rect key="frame" x="60" y="37" width="230" height="0.0"/>
                                                     <fontDescription key="fontDescription" type="system" pointSize="12"/>
                                                     <color key="textColor" red="0.40784313725490196" green="0.40784313725490196" blue="0.40784313725490196" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                                     <nil key="highlightedColor"/>
@@ -982,12 +981,13 @@
                                                     </connections>
                                                 </button>
                                                 <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="ffC-6b-70Q">
-                                                    <rect key="frame" x="285" y="25.5" width="35" height="35"/>
+                                                    <rect key="frame" x="290" y="28" width="30" height="30"/>
                                                     <constraints>
-                                                        <constraint firstAttribute="height" constant="35" id="UGz-yK-1QP"/>
-                                                        <constraint firstAttribute="width" constant="35" id="jrQ-ef-Kt6"/>
+                                                        <constraint firstAttribute="height" constant="30" id="UGz-yK-1QP"/>
+                                                        <constraint firstAttribute="width" constant="30" id="jrQ-ef-Kt6"/>
                                                     </constraints>
-                                                    <state key="normal" image="ic_close_24.png"/>
+                                                    <color key="tintColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
+                                                    <state key="normal" image="remove"/>
                                                     <connections>
                                                         <action selector="tappedDeleteCell:" destination="5TQ-gH-dvK" eventType="touchUpInside" id="Lqw-Pf-Fmp"/>
                                                     </connections>
@@ -1151,7 +1151,7 @@
                                         <rect key="frame" x="0.0" y="28" width="320" height="80"/>
                                         <autoresizingMask key="autoresizingMask"/>
                                         <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="KQz-We-sOP" id="YhF-h3-tXK">
-                                            <rect key="frame" x="0.0" y="0.0" width="320" height="80"/>
+                                            <rect key="frame" x="0.0" y="0.0" width="320" height="79.5"/>
                                             <autoresizingMask key="autoresizingMask"/>
                                             <subviews>
                                                 <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Email" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="WG9-i0-21A">
@@ -1160,8 +1160,8 @@
                                                     <nil key="textColor"/>
                                                     <nil key="highlightedColor"/>
                                                 </label>
-                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="location" textAlignment="justified" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Fvn-pG-g0s">
-                                                    <rect key="frame" x="55" y="35" width="210" height="14"/>
+                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="waiting..." textAlignment="justified" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Fvn-pG-g0s">
+                                                    <rect key="frame" x="55" y="35" width="210" height="13.5"/>
                                                     <fontDescription key="fontDescription" type="system" pointSize="11"/>
                                                     <nil key="textColor"/>
                                                     <nil key="highlightedColor"/>
@@ -1274,7 +1274,7 @@
                                         <rect key="frame" x="0.0" y="28" width="320" height="80"/>
                                         <autoresizingMask key="autoresizingMask"/>
                                         <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="SJn-tH-WK1" id="rWs-Pm-c8L">
-                                            <rect key="frame" x="0.0" y="0.0" width="320" height="80"/>
+                                            <rect key="frame" x="0.0" y="0.0" width="320" height="79.5"/>
                                             <autoresizingMask key="autoresizingMask"/>
                                             <subviews>
                                                 <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Email" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="6XE-Au-hIc">
@@ -1383,11 +1383,11 @@
         <image name="googlePlus" width="40" height="40"/>
         <image name="hidePassword" width="35" height="35"/>
         <image name="ic_avar" width="75" height="75"/>
-        <image name="ic_close_24.png" width="24" height="24"/>
         <image name="ico_close" width="16" height="16"/>
         <image name="ico_search" width="18" height="18"/>
         <image name="icon_close" width="40" height="40"/>
         <image name="logo-1" width="150" height="150"/>
+        <image name="remove" width="40" height="40"/>
         <image name="save" width="40" height="39"/>
         <image name="shareLocation" width="30" height="30"/>
         <image name="showPassword" width="35" height="35"/>
